      to expunge locale.library from memory.
    * Makefile: the .o files and the final binary are now placed into system
      specific directories to be able to build FlexCat for multiple platforms
      at the same time.
    * openlibs.c, vastubs.c, main.c: made FlexCat (cross)compilable for AmigaOS3
      again.
    * lib/NoAutoC_c.sd: fixed a warning for the OS3 build.

2010-06-01  Mariusz Danilewicz <mandi@interia.pl>

    * polish.ct: updated the existing Polish catalog translation

2007-12-13  Vit Sindlar <sindlarv at centrum dot cz>

    * czech.ct: updated the existing Czech catalog translation

2007-12-04  David Rey <tactica@users.sourceforge.net>

    * Makefile: made it more readable and also accept "powerpc" again in
      addition to "ppc" from "uname -m" for backwards compatibility.
    * showfuncs.c, showfuncs.h: added ShowErrorQuick() function to show
      errors omitting any line number.
    * scancd.c: now uses ShowErrorQuick() to complain about a missing
      catalog description file.
    * scanct.c: likewise to complain about a missing catalog translation
      file; now also detects an empty, missing or bad "## codeset" header,
      and a missing version; also added some debug output.
    * catalogs/FlexCat.cd: added new errors to suit.

2007-05-16  Joerg Strohmayer <nospam@gmx.de>
    * scancd.c: Ignores commands "printf_check_off" and "printf_check_on".

2007-05-07  Joerg Strohmayer <nospam@gmx.de>
    * Hardcode_c.sd and locale_other.c: Added missing const from patch
      #1713307.
    * Makefile: Fixed uname check, uname -m returns ppc, not powerpc, on
      AmigaOS4.

2007-01-21  Jens Langner <Jens.Langner@light-speed.de>

    * Makefile: adapted makefile to carry a DEBUG= option for compiling
      flexcat without any debugging enabled at all. Also added the "-m32" gcc
      option to the unix builds so that a 32bit version of flexcat will be
      generated. We somehow still have problems on getting correct